--- a/index.html
+++ b/index.html
@@ -39,40 +39,182 @@
             <span class="shopping-counter">12</span>
             </a>
     </header>
-    <main class="container">
-        <div class="slider">
+    <main>
+        <div class="slider container">
             <div class="slide slide-text-light slite-summer">
                 <div class="slide-content">
                     <h2 class="slide-title">Неделя летних овощей</h2>
                     <p class="slide-text">Специальная овощная корзина. Новые продукты, специальные цены, скидки!</p>
-                    <a href="" class="button button-primary">Заказать со скидкой</a>
+                    <a href="#" class="button button-primary">Заказать со скидкой</a>
                 </div>
             </div>
         </div>
+        <div class="container">
         <div class="promo">
-            <section class="card card-text-light sweet-basket">
-                <div class="card-header">
-                    <h3 class="card-title">Сладкая корзина</h3>
-                    <p class="card-description">Произвольный выбор десертов по Вашему желанию.</p>
-                </div>
-                <div class="card-footer">
-                    <stong class="card-price">ОТ 1 300 ₽</stong>
-                    <span class="card-delivery">стоимость доставки до 200 ₽</span>
-                    <a href="#" class="button button-default">Собрать корзину</a>
-                </div>
-            </section>
-            <section class="card card-text-light minimal-efforts">
-                <div class="card-header">
-                    <h3 class="card-title">Минимум усилий</h3>
-                    <p class="card-description">Произвольный выбор продуктов по Вашему желанию.</p>
-                </div>
-                <div class="card-footer">
-                    <stong class="card-price">ОТ 700 ₽</stong>
-                    <span class="card-delivery">стоимость доставки до 200 ₽</span>
-                    <a href="#" class="button button-default">Собрать корзину</a>
-                </div>
-            </section>
+                <section class="card card-text-light sweet-basket">
+                    <div class="card-header">
+                        <h3 class="card-title">Сладкая корзина</h3>
+                        <p class="card-description">Произвольный выбор десертов по Вашему желанию.</p>
+                    </div>
+                    <div class="card-footer">
+                        <stong class="card-price">ОТ 1 300 ₽</stong>
+                        <span class="card-delivery">стоимость доставки до 200 ₽</span>
+                        <a href="#" class="button button-default">Собрать корзину</a>
+                    </div>
+                </section>
+                <section class="card card-text-light minimal-efforts">
+                    <div class="card-header">
+                        <h3 class="card-title">Минимум усилий</h3>
+                        <p class="card-description">Произвольный выбор продуктов по Вашему желанию.</p>
+                    </div>
+                    <div class="card-footer">
+                        <stong class="card-price">ОТ 700 ₽</stong>
+                        <span class="card-delivery">стоимость доставки до 200 ₽</span>
+                        <a href="#" class="button button-default">Собрать корзину</a>
+                    </div>
+                </section>
+            </div>
         </div>
+        <secion class="delivery-week container">
+            <h2 class="section-title">Доставка готовой еды на неделю</h2>
+            <div class="delivery-cards">
+                <div class="delivery-card">
+                    <img src="/img/cards/card-1.png" alt="" class="delivery-img">
+                    <span class="delivery-tag tag-health">ЗОЖ</span>
+                </div>
+                <div class="delivery-card">
+                    <img src="/img/cards/card-2.png" alt="" class="delivery-img">
+                    <span class="delivery-tag tag-veg tag-text-light">Овощное</span>
+                </div>
+                <div class="delivery-card">
+                    <img src="/img/cards/card-3.png" alt="" class="delivery-img">
+                    <span class="delivery-tag tag-meat tag-text-light">Мясное</span>
+                </div>
+                <div class="delivery-card">
+                    <img src="/img/cards/card-4.png" alt="" class="delivery-img">
+                    <span class="delivery-tag tag-bird tag-text-light">Птица</span>
+                </div>
+                <div class="delivery-card">
+                    <img src="/img/cards/card-5.png" alt="" class="delivery-img">
+                    <span class="delivery-tag tag-fish tag-text-light">Рыбное</span>
+                </div>
+                <div class="delivery-card">
+                    <img src="/img/cards/card-6.png" alt="" class="delivery-img">
+                    <span class="delivery-tag tag-child">Детское</span>
+                </div>
+                <div class="delivery-card">
+                    <img src="/img/cards/card-7.png" alt="" class="delivery-img">
+                    <span class="delivery-tag tag-parent">Родителям</span>
+                </div>
+                <div class="delivery-card">
+                    <img src="/img/cards/card-8.png" alt="" class="delivery-img">
+                    <span class="delivery-tag tag-holiday">Праздничное</span>
+                </div>
+            </div>
+        </secion>
+        <section class="category section-grey">
+            <div class="container">
+                <h2 class="section-title">Категории блюд</h2>
+                <ul class="tabs">
+                    <li class="tabs-item "><a href="#" class="tabs-link active">Популярные блюда</a></li>
+                    <li class="tabs-item"><a href="#" class="tabs-link">Овощное</a></li>
+                    <li class="tabs-item"><a href="#" class="tabs-link">Мясное</a></li>
+                </ul>
+                <div class="tabs-content">
+                    <div class="tabs-card">
+                        <img src="img/chicken-wings.png" alt="" class="tabs-img">
+                        <div class="tabs-card-content">
+                            <h3 class="tabs-title">Куриные крылья под соусом Терияки</h3>
+                            <p class="tabs-description">Соус Терияки придумали повора из Японии. По традиции его используют в качестве маринада для...</p>
+                            <div class="tabs-info">
+                                <div class="tabs-good">
+                                    <span class="tabs-price">260 ₽</span>
+                                    <span class="tabs-weight">500 гр</span>
+                                </div>
+                                <button class="button button-outline">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tabs-card">
+                        <img src="img/chicken-wings.png" alt="" class="tabs-img">
+                        <div class="tabs-card-content">
+                            <h3 class="tabs-title">Куриные крылья под соусом Терияки</h3>
+                            <p class="tabs-description">Соус Терияки придумали повора из Японии. По традиции его используют в качестве маринада для...</p>
+                            <div class="tabs-info">
+                                <div class="tabs-good">
+                                    <span class="tabs-price">260 ₽</span>
+                                    <span class="tabs-weight">500 гр</span>
+                                </div>
+                                <button class="button button-outline">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tabs-card">
+                        <img src="img/chicken-wings.png" alt="" class="tabs-img">
+                        <div class="tabs-card-content">
+                            <h3 class="tabs-title">Куриные крылья под соусом Терияки</h3>
+                            <p class="tabs-description">Соус Терияки придумали повора из Японии. По традиции его используют в качестве маринада для...</p>
+                            <div class="tabs-info">
+                                <div class="tabs-good">
+                                    <span class="tabs-price">260 ₽</span>
+                                    <span class="tabs-weight">500 гр</span>
+                                </div>
+                                <button class="button button-outline">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tabs-card">
+                        <img src="img/chicken-wings.png" alt="" class="tabs-img">
+                        <div class="tabs-card-content">
+                            <h3 class="tabs-title">Куриные крылья под соусом Терияки</h3>
+                            <p class="tabs-description">Соус Терияки придумали повора из Японии. По традиции его используют в качестве маринада для...</p>
+                            <div class="tabs-info">
+                                <div class="tabs-good">
+                                    <span class="tabs-price">260 ₽</span>
+                                    <span class="tabs-weight">500 гр</span>
+                                </div>
+                                <button class="button button-outline">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="button button-outline button-center">Больше блюд</button>
+            </div>
+        </section>
+        <section class="benefits container">
+            <h2 class="section-title">Наши преимущества</h2>
+            <div class="benefits-cards">
+                <div class="benefit-card">
+                    <img src="img/ben1.svg" alt="" class="benefit-img">
+                    <h3 class="benefit-title">Какой путь проходит ваша еда</h3>
+                    <p class="benefit-description">Вы делаете заказ на коробку с недельным запасом полуфабрикатов и готовых блюд для всей семьи</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="img/ben2.svg" alt="" class="benefit-img">
+                    <h3 class="benefit-title">Как происходит производство</h3>
+                    <p class="benefit-description">За день до доставки мы сами готовим блюда из натуральных продуктов без консервантов, красителей и гмо</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="img/ben3.svg" alt="" class="benefit-img">
+                    <h3 class="benefit-title">Высокие стандарты качества</h3>
+                    <p class="benefit-description">Наши повара с многолетним опытом с любовью готовят каждую порцию блюда</p>
+                </div>
+                <div class="benefit-card">
+                    <img src="img/ben4.svg" alt="" class="benefit-img">
+                    <h3 class="benefit-title">Быстрая и качественная доставка</h3>
+                    <p class="benefit-description">Сами доставим всё прямо в вашу морозилку, сохранив температурный режим и качество наших блюд</p>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="section-grey">
+        <div class="footer-wrapper container">
+            <img src="/img/logo.png" alt="logo" class="footer-logo">
+            <nav class="footer-nav">
+                <a href="#" class="footer-link">Доставка и оплата</a>
+                <a href="#" class="footer-link">Напишите нам</a>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
