--- a/index.html
+++ b/index.html
@@ -79,35 +79,35 @@
             <h2 class="section-title">Доставка готовой еды на неделю</h2>
             <div class="delivery-cards">
                 <div class="delivery-card">
-                    <img src="/img/cards/card-1.png" alt="" class="delivery-img">
+                    <img src="img/cards/card-1.png" alt="" class="delivery-img">
                     <span class="delivery-tag tag-health">ЗОЖ</span>
                 </div>
                 <div class="delivery-card">
-                    <img src="/img/cards/card-2.png" alt="" class="delivery-img">
+                    <img src="img/cards/card-2.png" alt="" class="delivery-img">
                     <span class="delivery-tag tag-veg tag-text-light">Овощное</span>
                 </div>
                 <div class="delivery-card">
-                    <img src="/img/cards/card-3.png" alt="" class="delivery-img">
+                    <img src="img/cards/card-3.png" alt="" class="delivery-img">
                     <span class="delivery-tag tag-meat tag-text-light">Мясное</span>
                 </div>
                 <div class="delivery-card">
-                    <img src="/img/cards/card-4.png" alt="" class="delivery-img">
+                    <img src="img/cards/card-4.png" alt="" class="delivery-img">
                     <span class="delivery-tag tag-bird tag-text-light">Птица</span>
                 </div>
                 <div class="delivery-card">
-                    <img src="/img/cards/card-5.png" alt="" class="delivery-img">
+                    <img src="img/cards/card-5.png" alt="" class="delivery-img">
                     <span class="delivery-tag tag-fish tag-text-light">Рыбное</span>
                 </div>
                 <div class="delivery-card">
-                    <img src="/img/cards/card-6.png" alt="" class="delivery-img">
+                    <img src="img/cards/card-6.png" alt="" class="delivery-img">
                     <span class="delivery-tag tag-child">Детское</span>
                 </div>
                 <div class="delivery-card">
-                    <img src="/img/cards/card-7.png" alt="" class="delivery-img">
+                    <img src="img/cards/card-7.png" alt="" class="delivery-img">
                     <span class="delivery-tag tag-parent">Родителям</span>
                 </div>
                 <div class="delivery-card">
-                    <img src="/img/cards/card-8.png" alt="" class="delivery-img">
+                    <img src="img/cards/card-8.png" alt="" class="delivery-img">
                     <span class="delivery-tag tag-holiday">Праздничное</span>
                 </div>
             </div>
@@ -209,7 +209,7 @@
     </main>
     <footer class="section-grey">
         <div class="footer-wrapper container">
-            <img src="/img/logo.png" alt="logo" class="footer-logo">
+            <img src="img/logo.png" alt="logo" class="footer-logo">
             <nav class="footer-nav">
                 <a href="#" class="footer-link">Доставка и оплата</a>
                 <a href="#" class="footer-link">Напишите нам</a>
