--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="card-footer">
                         <stong class="card-price">ОТ 1 300 ₽</stong>
                         <span class="card-delivery">стоимость доставки до 200 ₽</span>
-                        <a href="#" class="button button-default">Собрать корзину</a>
+                        <button class="button button-default">Собрать корзину</button>
                     </div>
                 </section>
                 <section class="card card-text-light minimal-efforts">
@@ -70,7 +70,7 @@
                     <div class="card-footer">
                         <stong class="card-price">ОТ 700 ₽</stong>
                         <span class="card-delivery">стоимость доставки до 200 ₽</span>
-                        <a href="#" class="button button-default">Собрать корзину</a>
+                        <button class="button button-default">Собрать корзину</button>
                     </div>
                 </section>
             </div>
@@ -185,22 +185,22 @@
             <h2 class="section-title">Наши преимущества</h2>
             <div class="benefits-cards">
                 <div class="benefit-card">
-                    <img src="img/ben1.svg" alt="" class="benefit-img">
+                    <img src="img/benefits/ben1.svg" alt="" class="benefit-img benefit1">
                     <h3 class="benefit-title">Какой путь проходит ваша еда</h3>
                     <p class="benefit-description">Вы делаете заказ на коробку с недельным запасом полуфабрикатов и готовых блюд для всей семьи</p>
                 </div>
                 <div class="benefit-card">
-                    <img src="img/ben2.svg" alt="" class="benefit-img">
+                    <img src="img/benefits/ben2.svg" alt="" class="benefit-img benefit2">
                     <h3 class="benefit-title">Как происходит производство</h3>
                     <p class="benefit-description">За день до доставки мы сами готовим блюда из натуральных продуктов без консервантов, красителей и гмо</p>
                 </div>
                 <div class="benefit-card">
-                    <img src="img/ben3.svg" alt="" class="benefit-img">
+                    <img src="img/benefits/ben3.svg" alt="" class="benefit-img benefit3">
                     <h3 class="benefit-title">Высокие стандарты качества</h3>
                     <p class="benefit-description">Наши повара с многолетним опытом с любовью готовят каждую порцию блюда</p>
                 </div>
                 <div class="benefit-card">
-                    <img src="img/ben4.svg" alt="" class="benefit-img">
+                    <img src="img/benefits/ben4.svg" alt="" class="benefit-img benefit4">
                     <h3 class="benefit-title">Быстрая и качественная доставка</h3>
                     <p class="benefit-description">Сами доставим всё прямо в вашу морозилку, сохранив температурный режим и качество наших блюд</p>
                 </div>
@@ -216,5 +216,6 @@
             </nav>
         </div>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
